docs: update content

--- a/docs/layouts/_default/baseof.html
+++ b/docs/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   <head>
     {{ partial "head" . }}
   </head>
-  {{ block "body_override" . }}<body class="d-flex legacy-theme">{{ end }}
+  {{ block "body_override" . }}<body class="d-flex">{{ end }}
     {{/*  {{ partial "skippy" . }}  */}}
     {{ partial "sidebar" . }}
     <div class="wrapper flex-grow-1">
