--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -39,6 +39,7 @@ $enable-cssgrid: true; // stylelint-disable-line scss/dollar-variable-default
 
 // Load docs components
 @import "variables";
+@import "ads";
 @import "subnav";
 @import "masthead";
 @import "content";
