fix(forms): angular validation classes revert
This reverts commit 90f99f31ad5e44423dd6d5acb16b35c3414f52d0.

--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -5,11 +5,11 @@
 @mixin form-validation-state-selector($state) {
   @if ($state == "valid" or $state == "invalid") {
     .was-validated #{if(&, "&", "")}:#{$state},
-    #{if(&, "&", "")}.is-#{$state}, #{if(&, "&", "")}.ng-#{$state} {
+    #{if(&, "&", "")}.is-#{$state} {
       @content;
     }
   } @else {
-    #{if(&, "&", "")}.is-#{$state}, #{if(&, "&", "")}.ng-#{$state}  {
+    #{if(&, "&", "")}.is-#{$state} {
       @content;
     }
   }
