--- a/scss/forms/_form-select.scss
+++ b/scss/forms/_form-select.scss
@@ -69,3 +69,8 @@
   @include font-size($form-select-font-size-lg);
   @include border-radius($form-select-border-radius-lg);
 }
+
+//temp fix for dark-theme select options
+.dark-theme .form-select > option {
+  background-color: #44454e;
+}
