--- a/docs/layouts/partials/stylesheet.html
+++ b/docs/layouts/partials/stylesheet.html
@@ -1,10 +1,10 @@
 {{- "<!-- Bootstrap core CSS -->" | safeHTML }}
 {{ if eq hugo.Environment "production" -}}
-{{ if eq .Page.Params.direction "rtl" -}}
-<link href="/dist/css/coreui.rtl.min.css" rel="stylesheet" {{ printf "integrity=%q" .Site.Params.cdn.css_rtl_hash | safeHTMLAttr }} crossorigin="anonymous">
-{{- else -}}
-<link href="/dist/css/coreui.min.css" rel="stylesheet" {{ printf "integrity=%q" .Site.Params.cdn.css_hash | safeHTMLAttr }} crossorigin="anonymous">
-{{- end -}}
+  {{ if eq .Page.Params.direction "rtl" -}}
+  <link href="/dist/css/coreui.rtl.min.css" rel="stylesheet" {{ printf "integrity=%q" .Site.Params.cdn.css_pro_rtl_hash | safeHTMLAttr }} crossorigin="anonymous">
+  {{- else -}}
+  <link href="/dist/css/coreui.min.css" rel="stylesheet" {{ printf "integrity=%q" .Site.Params.cdn.css_pro_hash | safeHTMLAttr }} crossorigin="anonymous">
+  {{- end -}}
 
 {{- else -}}
 <link href="/dist/css/coreui{{ if eq .Page.Params.direction "rtl" }}.rtl{{ end }}.css" rel="stylesheet">
