--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2043,6 +2043,9 @@ $sidebar-border-width:                     0 !default;
 $sidebar-border-color:                     transparent !default;
 $sidebar-transition:                       margin-left .15s, margin-right .15s, box-shadow .075s, transform .15s, width .15s, z-index 0s ease .15s !default;
 
+$sidebar-close-button-width:               2rem !default;
+$sidebar-close-button-height:              4rem !default;
+
 $sidebar-brand-height:                     4rem !default;
 $sidebar-brand-color:                      $high-emphasis-inverse !default;
 $sidebar-brand-bg:                         rgba($black, .2) !default;
