--- a/scss/forms/_form-multi-select.scss
+++ b/scss/forms/_form-multi-select.scss
@@ -112,6 +112,14 @@
   &.form-multi-select-with-cleaner {
     @include ltr-rtl("padding-right", ($form-multi-select-indicator-padding + $form-multi-select-cleaner-width + 2 * $form-multi-select-cleaner-padding-x));
   }
+
+  &.is-invalid  {
+    --#{$prefix}form-multi-select-border-color: #{$form-feedback-invalid-color};
+  }
+
+  &.is-valid  {
+    --#{$prefix}form-multi-select-border-color: #{$form-feedback-valid-color};
+  }
 }
 
 .form-multi-select-selection-tags {
