refactor(Header): add the class which prevents hiding toggler

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -180,6 +180,10 @@
   &:not(:disabled) {
     cursor: pointer;
   }
+
+  &.prevent-hide {
+    display: block !important; // stylelint-disable-line declaration-no-important
+  }
 }
 
 .header-toggler-icon {
