--- a/docs/assets/scss/_banner.scss
+++ b/docs/assets/scss/_banner.scss
@@ -27,7 +27,7 @@
     width: 100%;
     max-width: 100%;
     height: 100%;
-    background: url("./../img/percents-bg.png");
+    background: url("./../img/cyber-bg.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100%;
