--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1205,7 +1205,7 @@ $form-multi-select-box-shadow:              inset 0 1px 2px rgba($black, .075) !
 $form-multi-select-focus-width:             $input-focus-width !default;
 $form-multi-select-focus-color:             $input-color !default;
 $form-multi-select-focus-bg:                $input-bg !default;
-$form-multi-select-focus-border-color:      shift-color($component-active-bg, -25) !default;
+$form-multi-select-focus-border-color:      shift-color($component-active-bg, -25%) !default;
 $form-multi-select-focus-box-shadow:        0 0 0 $form-multi-select-focus-width $input-btn-focus-color !default;
 
 $form-multi-select-selection-tags-padding-y:  .125rem !default;
@@ -1264,7 +1264,7 @@ $form-multi-select-option-padding-y:        .5rem !default;
 $form-multi-select-option-padding-x:        1.25rem !default;
 $form-multi-select-option-border-radius:    $border-radius !default;
 
-$form-multi-select-option-hover-color:     shift-color($gray-900, 5) !default;
+$form-multi-select-option-hover-color:     shift-color($gray-900, +5%) !default;
 $form-multi-select-option-hover-bg:        rgba($gray-100, .5) !default;
 
 $form-multi-select-option-indicator-width:          1em !default;
