--- a/docs/layouts/_default/docs.html
+++ b/docs/layouts/_default/docs.html
@@ -3,45 +3,7 @@
   <main class="docs-main order-1">
     <div class="docs-intro ps-lg-4">
       {{ partial "breadcrumb" . }}
-      <a class="black-friday-banner rounded" href="https://coreui.io/pricing/?framework=bootstrap&amp;docs=coreui-banner-cyber-week">
-        <div class="row">
-          <div class="col-xl-7 align-self-center">
-            <div class="p-3 p-xl-5">
-              <h2 class="fs-3">Are you ready for Cyber Week Deals?</h2>
-              <h3 class="fs-5">Up to 70% discount for CoreUI PRO Admin Templates and UI Components.</h3>
-              <div>This year we prepared a limited Cyber Week offer for our clients and users. The first 100 people can get our products with <strong>up&nbsp;to&nbsp;70%&nbsp;discount.</strong></div>
-            </div>
-          </div>
-          <div class="col-xl-5 align-self-center">
-            <div class="p-2">
-              <img class="logo mx-auto" src="/assets/img/coreui_alt_400px_cyber.webp" alt="CoreUI logo" loading="lazy">
-            </div>
-          </div>
-        </div>
-      </a>
-      <!-- {{ if .Page.Params.pro_component }}
-      <div class="bg-danger bg-opacity-10 border-start border-start-5 border-start-danger p-4 pb-3 mb-5">
-        <h3 class="mb-4">CoreUI PRO Component</h3>
-        <p>
-          To use this component you must have a CoreUI PRO license. Buy the <a href="https://coreui.io/pricing/?framework=bootstrap&docs=coreui-banner-pro">CoreUI PRO</a> and get access to all PRO components, features, templates, and dedicated support.
-        </p>
-      </div>
-      {{ else }}
-      <div class="bg-info bg-opacity-10 border-start border-start-5 border-start-info p-4 pb-3 mb-5">
-        <h3 class="mb-4">Support CoreUI Development</h3>
-        <p>
-          CoreUI is an MIT-licensed open source project and is completely free to use. However, the amount of effort needed to maintain and develop new features for the project is not sustainable without proper financial backing.
-        </p>
-        <p>
-          You can support our Open Source software development in the following ways:
-        </p>
-        <ul>
-          <li>Buy the <a href="https://coreui.io/pricing/?framework=bootstrap&docs=coreui-banner-free">CoreUI PRO</a> and get access to all PRO components, features, templates, and dedicated support.</li>
-          <li><a href="https://opencollective.com/coreui" target="_blank">Became a sponsor</a>, and get your logo on BACKERS.md/README.md files or each site of this documentation</li>
-          <li>Give us a star ⭐️ on <a href="https://github.com/coreui/coreui" target="_blank">Github</a>.</li>
-        </ul>
-      </div>
-      {{ end }} -->
+      {{ partial "banner" . }}
       <h1 class="docs-title" id="content">{{ .Title | markdownify }}</h1>
       <p class="docs-lead">{{ .Page.Params.Description | markdownify }}</p>
       {{ partial "ads" . }}
