--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -21,10 +21,13 @@
         </a>
       </li>
     </ul>
-
     <a class="btn btn-outline-primary d-lg-inline-block my-2 my-md-0 ms-md-3" href="/getting-started/download/">
-      {{ partial "icons/cloud-download.svg" (dict "class" "icon me-2") }}
-      Download
+      {{ partial "icons/cloud-download.svg" (dict "class" "icon me-lg-2") }}
+      <span class="d-none d-lg-inline-block">Download</span>
+    </a>
+    <a class="btn btn-outline-primary d-lg-inline-block my-2 my-md-0 ms-md-3" href="https://coreui.io/about/services/?docs=coreui-header-button">
+      {{ partial "icons/handshake.svg" (dict "class" "icon me-2") }}
+      Hire Us
     </a>
     <a class="btn btn-primary d-lg-inline-block my-2 my-md-0 ms-md-3" href="https://coreui.io/pricing/?framework=bootstrap&docs=coreui-header-button">
       Buy CoreUI PRO
