--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -120,12 +120,6 @@
 // Alternate buttons
 //
 
-.btn-transparent {
-  --#{$prefix}btn-active-border-color: transparent;
-  --#{$prefix}btn-disabled-border-color: transparent;
-  --#{$prefix}btn-hover-border-color: transparent;
-}
-
 // scss-docs-start btn-variant-loops
 @each $state, $variant in $button-variants {
   .btn-#{$state} {
@@ -146,6 +140,17 @@
 }
 // scss-docs-end btn-variant-loops
 
+.btn-transparent {
+  --#{$prefix}btn-active-border-color: transparent;
+  --#{$prefix}btn-disabled-border-color: transparent;
+  --#{$prefix}btn-hover-border-color: transparent;
+  --#{$prefix}btn-box-shadow: none;
+  --#{$prefix}btn-focus-shadow-rgb: #{to-rgb(mix(color-contrast($primary), $primary, 15%))};
+
+  @if $enable-gradients {
+    background-image: none;
+  }
+}
 
 //
 // Link buttons
